using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Moteur
{
    public class Game
    {
        string name;
        Player[] players;
        string[] history;
    }
}
