using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Moteur
{
    public class PublicPlayer
    {
        string username;
        string userPic;
        bool isAlive;
        IRole? role;
    }
}
